[package]
name = "rust"
version = "0.1.0"
authors = ["张永杰 <yongjie.zhang@henganpros.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]